# latency-cpp

./: .gitignore  .gitmodules  README.md  build.sh  dump.sh  framework_design.md  issues.md  run.sh  runner  scorer.py  test.sh
dev/: dev_build.sh  dev_run.sh  dev_shell.sh  dev_start.sh  dev_stop.sh  gdb_setup.sh  run_build_in_container.sh  run_test_in_container.sh
lat-spring-data/: public1.res  public2.res
solution/: CMakeLists.txt  Dockerfile  README.md  build.sh
solution/src/: frame_processor.cpp  frame_processor.h  main.cpp  orderbook.cpp  orderbook.h  pcap_dumper.cpp  pcap_reader.cpp  pcap_reader.h  protocol_logger.h  protocol_parser.cpp  protocol_parser.h  shared_queue.cpp  shared_queue.h
trading-data-listener/: Dockerfile  README.md
trading-data-listener/src/: frame_processor.cpp  frame_processor.h  orderbook.cpp  protocol_logger.h  protocol_parser.cpp  shared_queue.cpp  shared_queue.h
